cmake_minimum_required(VERSION 3.5)
project(pmf_cpu)
find_package(PCL REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -fopenmp")
add_executable(pmf_cpu pmf_cpu.cpp)
target_link_libraries(pmf_cpu ${PCL_LIBRARIES})
